--- a/NavegandoEntreArquivoseDiretorios/contact.html
+++ b/NavegandoEntreArquivoseDiretorios/contact.html
@@ -35,13 +35,13 @@
       
       <ul>
             <li>
-               <a href="mailto@francksouzah@gmail.com" target="_blank"  title="ir para o Gmail"> email</a>
+               <a href="mailto:francksouzah@gmail.com" target="_blank"  title="ir para o Gmail"> email</a>
             </li>
             <li>
-              <a href="tel +5537998314880" title="Fazer chamada"> telefone</a>
+              <a href="tel:+5537998314880" title="Fazer chamada">(37)99831-4880</a>
             </li>
             <li>
-              <a href="https://facebook.com/fds_jogos" title="Acessar Página no Facebook"> Facebook</a>
+              <a href="https://facebook.com/fds_jogos" target="_blank" title="Acessar Página no Facebook"> Facebook</a>
             </li>         
       </ul>
   </nav>
