--- a/NavegandoEntreArquivoseDiretorios/contact.html
+++ b/NavegandoEntreArquivoseDiretorios/contact.html
@@ -41,7 +41,7 @@
               <a href="tel:+5537998314880" title="Fazer chamada">(37)99831-4880</a>
             </li>
             <li>
-              <a href="https://facebook.com/fds_jogos" target="_blank" title="Acessar Página no Facebook"> Facebook</a>
+              <a href="https://www.facebook.com/FDSJOGOS" target="_blank" title="Acessar Página no Facebook"> Facebook</a>
             </li>         
       </ul>
   </nav>
