--- a/NavegandoEntreArquivoseDiretorios/index.html
+++ b/NavegandoEntreArquivoseDiretorios/index.html
@@ -29,12 +29,10 @@
   <h1>Criando Navegação entre Arquivos</h1>
   
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, aut quod. <br> Facere cum minima laboriosam optio animi quas architecto, iste nihil doloribus. Debitis animi provident quia quae, vero molestias et. <br>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, aut quod. <br> Facere cum minima laboriosam optio animi quas architecto, iste nihil doloribus. Debitis animi provident quia quae, vero molestias et. <br>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, aut quod. <br> Facere cum minima laboriosam optio animi quas architecto, iste nihil doloribus. Debitis animi provident quia quae, vero molestias et. <br>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, aut quod. <br> Facere cum minima laboriosam optio animi quas architecto, iste nihil doloribus. Debitis animi provident quia quae, vero molestias et.    
+    &nbsp;&nbsp;&nbsp;
+    Estou aprendendo na pratica, como navegar entre pastas e diretoriios atravez de link's. eu nunca pensei que undia eu iria consegir <br>
+    escrever alguma <em> <b>linha de comando </b></em> ou <em><b>código</b></em>, eu Amo tecnologia e minha meta e sempre evoluir com ela!
   </p>
-
 
 
 
