--- a/CriandoTableas/DICAS.html
+++ b/CriandoTableas/DICAS.html
@@ -23,8 +23,10 @@
             <code>
                 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> = serve para colocar icones ao lado do titulo no Browser nos favoritos <br>
 
-                <meta name="autor"  content="KIRITO"> = Serve para autenticar sua página <br>
-
+                <meta name="autor"  content="KIRITO"> = Serve para autenticar sua página 
+                <meta name="description"  content="Descriçao na pesquisa do Google">
+                <meta name="robots"  content="Aqui definimos algumas Funções especificas para o 'robot' de pesquisa faça  "> exemplo: index/noindex, follow/nfollow
+que 
         
             </code>
 
@@ -63,6 +65,31 @@
 
         <link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png?v=cfca599cb367ccaf7377d56ddc7542f5"/>
         </code>
+
+
+    
+        <!--Existem metadados personalizados por empresas de redes sociais, como Facebook, que criou o Open Graph,
+         que é um tipo de metadado se quisermos colocar um tipo de conteúdo especial, caso queiramos compartilhar o link da nossa página no Facebook.-->
+
+ 
+    <!-- Open Graph: facebook -->
+    <meta property="og:image" content="https://cdn-images-1.medium.com/max/92/1*TkXVfLTwsHdwpUEjGzdi9w@2x.jpeg">
+    <meta property="og:description" content="Aqui vem um texto para ser mostrado ao compartilhar no facebook">
+    <meta property="og:title" content="Um site da Rocketseat">
+
+    <!-- twitter -->
+    <meta name="twitter:title" content="Rocketseat">
+
+    <!--São exemplos de metadados, que o Facebook procura na hora que compartilhamos a nossa página, como imagens, descrição, texto e outros.
+
+    O Twitter usa o atributo name diferente do Facebook que resolveu usar o property-->.
+
+
+
+
+
+
+
     </div>
    
    
